Fixing insights dialog tooltip scrollbar bug

--- a/src/dialogs/InsightsDialog/InsightsDialog.scss
+++ b/src/dialogs/InsightsDialog/InsightsDialog.scss
@@ -5,7 +5,7 @@
     width: 70%;
     left: 15%;
     padding: 1vw;
-    overflow-y: auto;
+    overflow-y: hidden;
 
     .timer__tooltip {
         background-color: $main-background-color;
